tests/fixtures/sample-js-project-positive/shared/utils/src/errors/catch-cd271ac9.ts
export async function fn_cd271ac9(): Promise<void> {
  try {
    throw new Error("oops");
  } catch (e) {
    console.error(e);
  }
}
